<resources>
    <string name="app_name">Flower Shop</string>
    <string name="sign_in_help">New to our app? <b>Create one</b></string>
    <string name="sign_up_help">Already have an account? <b>Sign in</b></string>
    <string name="sign_in_title"><b>SIGN IN</b></string>
    <string name="sign_up_title"><b>SIGN UP</b></string>
    <string name="login_username_field">Username</string>
    <string name="login_password_field">Password</string>
    <string name="signup_username_field">Username</string>
    <string name="signup_password_field">Password</string>
    <string name="signup_confirm_field">Confirm Password</string>
    <string name="back_to_home_page"><b>BACK TO HOME PAGE</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_add">Extra</string>
    <string name="fab_email">Chat With Us</string>
    <string name="fab_map">View Map</string>
    <string name="chat_username">02:39 - Username</string>
    <string name="chat_other_username">Username - 02:39</string>
    <string name="chat_message">message</string>
    <string name="type_a_message">Type a message</string>
    <string name="back_button">Back</string>
    <string name="send">Send</string>
    <string name="notif_channel_name">Cart not empty</string>
    <string name="notif_cart_not_empty_title">Cart is not empty</string>
    <plurals name="notif_cart_not_empty_message">
        <item quantity="one">You have %d flower in your cart</item>
        <item quantity="other">You have %d flowers in your cart</item>
    </plurals>
</resources>